navigation sidebar may be dynamically sized via a profile setting

--- a/src/main/webapp/template/common-header.xhtml
+++ b/src/main/webapp/template/common-header.xhtml
@@ -5,10 +5,9 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
-
-    <p:outputPanel styleClass="w3-cell-row w3-teal w3-mobile" >
-        <p:outputPanel styleClass="w3-cell w3-cell-middle">
-            <button class="w3-button w3-teal w3-xlarge" onclick="toggle_sidebar_nav()" style="margin-left:5px;">&#9776;</button>
+    <p:outputPanel styleClass="w3-cell-row w3-flat-belize-hole w3-mobile" >
+        <p:outputPanel styleClass="w3-cell w3-cell-middle" style="width:#{profile.sidebarWidth}px;">
+            <button class="w3-button w3-xlarge" onclick="toggle_sidebar_nav()" style="margin-left:5px;">&#9776;</button>
         </p:outputPanel>
 
         <p:outputPanel styleClass="w3-cell w3-cell-middle">
