--- a/src/main/webapp/template/common-sidebar.xhtml
+++ b/src/main/webapp/template/common-sidebar.xhtml
@@ -5,7 +5,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:outputPanel id="layoutSidebar" class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left">
+    <p:outputPanel id="layoutSidebar" class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left" style="width:#{profile.sidebarWidth}px">
         <h:outputLink value="#" styleClass="w3-bar-item w3-button">Link</h:outputLink>
     </p:outputPanel>
 
