further implementation: fixed top- and bottom, padding

--- a/src/main/webapp/template/common-header.xhtml
+++ b/src/main/webapp/template/common-header.xhtml
@@ -6,12 +6,12 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <p:outputPanel styleClass="w3-cell-row w3-flat-belize-hole w3-mobile" >
-        <p:outputPanel styleClass="w3-cell w3-cell-middle" style="width:#{profile.sidebarWidth}px;">
-            <button class="w3-button w3-xlarge" onclick="toggle_sidebar_nav()" style="margin-left:5px;">&#9776;</button>
+        <p:outputPanel styleClass="w3-cell w3-cell-middle">
+            <button class="w3-button w3-xlarge w3-left" onclick="toggle_sidebar_nav()" style="margin-left:0px;margin-right:5px;">&#9776;</button>
         </p:outputPanel>
 
         <p:outputPanel styleClass="w3-cell w3-cell-middle">
-            <h3>Responsive JSF Layout Template</h3>
+            <h5>Responsive JSF Layout</h5>
         </p:outputPanel>
     </p:outputPanel>
 </ui:composition>
