--- a/src/main/webapp/template/common-sidebar.xhtml
+++ b/src/main/webapp/template/common-sidebar.xhtml
@@ -5,9 +5,12 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:outputPanel id="layoutSidebar" class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left" style="width:#{profile.sidebarWidth}px">
+
+        <header class="w3-padding w3-gray">
+            <h3>Test</h3>
+        </header>
+
         <h:outputLink value="#" styleClass="w3-bar-item w3-button">Link</h:outputLink>
-    </p:outputPanel>
 
 
 </ui:composition>
