--- a/src/main/webapp/template/common-footer.xhtml
+++ b/src/main/webapp/template/common-footer.xhtml
@@ -5,4 +5,6 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
+    Footer
+
 </ui:composition>
