--- a/src/main/webapp/template/common-header.xhtml
+++ b/src/main/webapp/template/common-header.xhtml
@@ -6,7 +6,7 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <p:outputPanel styleClass="w3-cell-row w3-flat-belize-hole w3-mobile" >
-        <p:outputPanel styleClass="w3-cell w3-cell-middle">
+        <p:outputPanel styleClass="w3-cell w3-cell-middle" style="width:48px;">
             <button class="w3-button w3-xlarge w3-left" onclick="toggle_sidebar_nav()" style="margin-left:0px;margin-right:5px;">&#9776;</button>
         </p:outputPanel>
 
