changed background color of footer panel to be white

--- a/src/main/webapp/template/responsive.xhtml
+++ b/src/main/webapp/template/responsive.xhtml
@@ -39,7 +39,7 @@
         </p:outputPanel>
     </p:outputPanel>
 
-    <p:outputPanel id="footer" styleClass="w3-cell-row w3-bottom w3-padding w3-border-top w3-small" style="margin-left:#{profile.sidebarWidth}px;">
+    <p:outputPanel id="footer" styleClass="w3-cell-row w3-bottom w3-padding w3-border-top w3-small w3-white" style="margin-left:#{profile.sidebarWidth}px;">
         <ui:insert name="footer">
             <ui:include src="common-footer.xhtml" />
         </ui:insert>
