added some comments

--- a/src/main/webapp/template/responsive.xhtml
+++ b/src/main/webapp/template/responsive.xhtml
@@ -25,20 +25,22 @@
     </p:outputPanel>
 
     <p:outputPanel id="body" styleClass="w3-cell-row">
+        <!-- sidebar panel -->
         <p:outputPanel id="layoutSidebar" class="w3-sidebar w3-padding-48 w3-bar-block w3-border-right w3-card w3-animate-left"
                        style="width:#{profile.sidebarWidth}px;z-index:250;">
-
             <ui:insert name="sidebar">
                 <ui:include src="common-sidebar.xhtml" />
             </ui:insert>
         </p:outputPanel>
 
+        <!-- main content of the page -->
         <p:outputPanel id="mainContent" styleClass="w3-container w3-padding-48 w3-margin-top"
                        style="margin-left:#{profile.sidebarWidth}px;">
             <ui:insert name="content" />
         </p:outputPanel>
     </p:outputPanel>
 
+    <!-- footer of the page -->
     <p:outputPanel id="footer" styleClass="w3-cell-row w3-bottom w3-padding w3-border-top w3-small w3-white" style="margin-left:#{profile.sidebarWidth}px;">
         <ui:insert name="footer">
             <ui:include src="common-footer.xhtml" />
